Add error handling and console display for fetchStudygoData function
* Add a div with id "console" to index.html to display error messages
* Add error handling in fetchStudygoData function to check for non-OK HTTP responses
* Add console.log statement and update innerText of console div with error message in fetchStudygoData function

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <button type="button" id="convert-button">Convert</button>
     </form>
     <textarea id="converted-text" rows="10" cols="50" readonly></textarea>
+    <div id="console"></div>
     <script src="converter.js"></script>
 </body>
 </html>
