--- a/index.html
+++ b/index.html
@@ -31,13 +31,24 @@
             </section>
             
             <section class="results-section hidden" id="results-section">
+                <div id="language-info" class="language-info">
+                    <div class="language-headers">
+                        <h3 id="term-language">Term Language: <span>English</span></h3>
+                        <h3 id="definition-language">Definition Language: <span>Dutch</span></h3>
+                    </div>
+                    <div class="card-count">
+                        <h3 id="card-count">Cards: <span>0</span></h3>
+                    </div>
+                    <button id="swap-languages-btn" class="swap-btn">Swap Front/Back</button>
+                </div>
+                
                 <h2>Flashcards</h2>
                 <div class="flashcards-container">
                     <table id="flashcards-table">
                         <thead>
                             <tr>
-                                <th>Term</th>
-                                <th>Definition</th>
+                                <th id="term-header">Term</th>
+                                <th id="definition-header">Definition</th>
                                 <th>Actions</th>
                             </tr>
                         </thead>
