--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <!-- Settings Icon (Moved outside container for fixed positioning) -->
+    <div id="settings-icon" class="settings-icon" title="Settings">
+        <i class="fas fa-cog"></i>
+    </div>
+
     <div class="container">
         <header>
             <h1>StudyGo Flashcard Converter</h1>
             <p>Convert StudyGo flashcards to CSV format</p>
-            <!-- Settings Icon -->
-            <div id="settings-icon" class="settings-icon" title="Settings">
-                <i class="fas fa-cog"></i> <!-- Font Awesome cog icon -->
-            </div>
         </header>
 
         <!-- Settings Panel (Initially Hidden) -->
