Refactor delimiter handling in CSV conversion: Update delimiter selection logic and improve handling of tab character. Add .gitignore for model_context.md.

--- a/editor.html
+++ b/editor.html
@@ -63,7 +63,7 @@
                         <label for="delimiter">Separator:</label>
                         <select id="delimiter">
                             <option value="," selected>Comma (,)</option>
-                            <option value="\t">Tab (⇥)</option>
+                            <option value="tab">Tab (⇥)</option> <!-- Changed value to "tab" -->
                             <option value="=">Equals (=)</option>
                             <!-- Add other delimiters if needed -->
                         </select>
