--- a/popup.html
+++ b/popup.html
@@ -75,7 +75,8 @@
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"> -->
 </head>
 <body>
-  <p>Extract flashcards from the <strong>current StudyGo list</strong>?</p>
+  <p>Extract flashcards from the <strong>current supported page</strong>?</p> <!-- Updated text -->
+  <div id="status" style="text-align: center; margin-bottom: 10px; font-size: 13px; min-height: 1.2em;"></div> <!-- Added status div -->
   <button id="extractBtn">Extract Flashcards</button>
   <script src="popup.js"></script>
 </body>
